o/p message on same page

--- a/templates/remove_emp.html
+++ b/templates/remove_emp.html
@@ -28,8 +28,8 @@
   </ul>
 </div>
 
-{% if success_message %}
-        <p>{{ success_message }}</p>
+{% if msg %}
+        <p>{{ msg }}</p>
     {% endif %}
 
     </div>
