--- a/templates/add_emp.html
+++ b/templates/add_emp.html
@@ -46,10 +46,35 @@
   </form>
 
 
+  {% if msg %}
+        <p>{{ msg }}</p>
+    {% endif %}
 
+ 
+    </div>
 
+    <div>
+      <h3>Department details</h3>
 
-
+ 
+        {% for i in depts %}
+        <tbody>
+          <tr>
+             
+            <td>{{i.name}}</td>
+             
+    
+           
+          </tr>
+          
+        </tbody>
+        {% endfor %}
+        {% if depts %}
+        <p>{{ depts }}</p>
+    {% endif %}
+      </form>
+       
+     
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
